Fixed Spacing of Cards

--- a/dashboard.css
+++ b/dashboard.css
@@ -1,13 +1,20 @@
 body {
     background-image: url("images/space\ pixel\ GIF.gif");
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.dashboard-block {
-    border: 2px solid white;
+#block-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 20px;
+    padding: 50px;
+}
+
+.dashboard-block { 
+    background: rgba(255, 255, 255, 0.15);
+    -webkit-backdrop-filter: blur(7px);
+    backdrop-filter: blur(7px);
+    border: 2px solid rgba(158, 171, 224, 0.992);
     border-radius: 20px;
-    padding: 20px 200px 100px 200px;
+    padding: 20px 200px 200px 200px;
     color: white;
 }
